release 1.1.1-ea (2009-06)
- Fixed issue 286
  https://jersey.dev.java.net/issues/show_bug.cgi?id=286
  Classes that extend ContextResolver may declare a type variable declaration
  that is resolved to a class or parameterized type by an extending class.
- Fixed issue 291
  https://jersey.dev.java.net/issues/show_bug.cgi?id=291
  If the @DefaultValue annotation is not present and no parameter is present
  an empty collection will be returned for the types List, Set or SortedSet.
- Added Jersey EJB sample
- Fixed issue 292
  https://jersey.dev.java.net/issues/show_bug.cgi?id=292
  The file based configuration of custom WadlGenerator implementations via
  the WadlGeneratorConfig is now deprecated and will be removed in future
  versions. As alternative the InputStream based configuration shall be used.

release 1.1.0-ea (2009-05-04)
- Fixed issue 283
  https://jersey.dev.java.net/issues/show_bug.cgi?id=283
  Removed race condition that may occur when concurrently creating the 
  meta-data for a resource class.
- Added security sample - https service with http basic authentication on
  GlassFish 2.x
- Fixed issue 278
  https://jersey.dev.java.net/issues/show_bug.cgi?id=278
  com.sun.jersey.api.client.filter.HTTPBasicAuthFilter was not correctly
  using "=" for padding characters when base 64 encoding the basic string
  derived from the user name and password.
- Fixed issue 151
  https://jersey.dev.java.net/issues/show_bug.cgi?id=151
  Added the following to ClientResponse:
  - enum Status, containing all known HTTP status codes
  - ClientResponse.getClientResponseStatus() that returns an instance of Status
- When using the Apache HTTP client the request output stream was not closed.
  This causes issues with using say the GZIP content encoding filter that
  requires the closing (or finishing) of the GZIP output stream
- Support a base path from which root resource classes are matchd when
  using the Grizzly adapter. The base path may be set as follows:
